Update liquor-license-applicant-pipeline.yml (#168)
This PR will make javascript console.logs appear in github actions logs

--- a/.github/workflows/liquor-license-applicant-pipeline.yml
+++ b/.github/workflows/liquor-license-applicant-pipeline.yml
@@ -40,7 +40,7 @@ jobs:
         id: generate
         working-directory: ./scripts
         run: |
-          OUTPUT=$(node getVotingMinutes.js)
+          OUTPUT=$(node getVotingMinutes.js 2>&1 | tee /dev/stderr)
           SEL_OUTPUT=$(echo "$OUTPUT" | grep "::JSON_OUTPUT::" | sed 's/::JSON_OUTPUT:://')
           SUCCESS=$(echo "$SEL_OUTPUT" | jq -r '.success')
           if [ "$SUCCESS" != "true" ]; then
