Fail explicitly if no success message

--- a/.github/workflows/liquor-license-applicant-pipeline.yml
+++ b/.github/workflows/liquor-license-applicant-pipeline.yml
@@ -42,6 +42,11 @@ jobs:
         run: |
           OUTPUT=$(node getVotingMinutes.js 2>&1 | tee /dev/stderr)
           SEL_OUTPUT=$(echo "$OUTPUT" | grep "::JSON_OUTPUT::" | sed 's/::JSON_OUTPUT:://')
+          SUCCESS=$(echo "$SEL_OUTPUT" | jq -r '.success')
+          if [ "$SUCCESS" != "true" ]; then
+            echo "Script failed : $OUTPUT"
+            exit 1 
+          fi
           PDF_FILE=$(echo "$SEL_OUTPUT" | jq -r '.fileName')
           VOTING_DATE=$(echo "$SEL_OUTPUT" | jq -r '.pdfDate')
           echo "pdf_file=$PDF_FILE" >> $GITHUB_OUTPUT
